...
  }
}

struct AppConfigurationLoader {
  private enum Key {
    static let environmentInfo = "HomeDesignEnvironment"
    static let environmentProcess = "HOME_DESIGN_ENVIRONMENT"
    static let apiBaseURLInfo = "HomeDesignAPIBaseURL"
    static let apiBaseURLProcess = "HOME_DESIGN_API_BASE_URL"
    static let authorizationEndpointInfo = "HomeDesignOIDCAuthorizationEndpoint"
    static let authorizationEndpointProcess = "HOME_DESIGN_OIDC_AUTHORIZATION_ENDPOINT"
    static let clientIdInfo = "HomeDesignOIDCClientID"
    static let clientIdProcess = "HOME_DESIGN_OIDC_CLIENT_ID"
...
